# food-ordering

./: CMakeLists.txt  data.txt  drink.c  drink.h  food-ordering-macros.h  food-subtype.c  food-subtype.h  food.c  food.h  input_data.c  input_data.h  load-data.c  load-data.h  macros.h  main.c  menu.c  menu.h  options.c  options.h  parse-data.c  parse-data.h  parse-string.c  parse-string.h  parse_input.c  parse_input.h  sign_in.c  sign_in.h  signin.c  signin.h  struct_type.h  user.c  user.h  userdata.c  userdata.h
